# docx-knife

./: .gitignore  .qoder  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: _docs.py  benchmark_core.py  conftest.py  test_bench_batch.py  test_bench_open.py  test_bench_query.py  test_bench_textmap.py  test_no_regressions.py
docs/: content-sources.md  errors.md  index.md  lifecycle.md  operations.md  quickstart.md
docx_knife/: __init__.py  _models.py  _ooxml.py  _paragraph_ops.py  _schema.py  anchors.py  batch.py  content.py  document.py  errors.py  paragraph.py  save.py  textmap.py
openspec/changes/archive/2026-07-06-docx-patch-engine/: proposal.md  tasks.md
openspec/changes/convenience-apis/: design.md  proposal.md  tasks.md
openspec/changes/convenience-apis/specs/bulk-replace/: spec.md
openspec/changes/convenience-apis/specs/cross-doc-copy/: spec.md
openspec/changes/docx-patch-engine/: design.md  tasks.md
openspec/specs/atomic-batch-processing/: spec.md
openspec/specs/content-sources-and-normalization/: spec.md
openspec/specs/document-query-and-anchors/: spec.md
openspec/specs/paragraph-editing/: spec.md
openspec/specs/safe-document-save/: spec.md
openspec/specs/text-map-editing/: spec.md
skills/docx-knife/: SKILL.md  _export_schema.py  agent_schema.json
skills/docx-knife/docs/: api.md  content-sources.md  errors.md  index.md  lifecycle.md  operations.md  quickstart.md
skills/docx-knife/examples/: insert_and_delete.json  replace_dates.json
spec/: design.md  docx-edit-agent-design.md
spec/old/: competitive-analysis.md
tests/: _fixtures.py  conftest.py  test_anchors.py  test_batch.py  test_content.py  test_copy_paragraphs.py  test_document_open.py  test_e2e.py  test_errors.py  test_models.py  test_paragraph_internal.py  test_paragraph_ops.py  test_query.py  test_real_docx.py  test_replace_all.py  test_save.py  test_sections.py  test_skill_schema.py  test_textmap.py
tests/test_data/real/: contract.docx  custody-agreement.docx  product-summary.docx  prospectus.docx
(+7 files in other folders)
