[project]
name = "docx-knife"
version = "0.1.0"
description = "AI-safe DOCX patch engine with stable paragraph anchors."
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [{ name = "docx-knife contributors" }]
keywords = ["docx", "ooxml", "editor", "ai", "patch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=5",
    "defusedxml>=0.7",
    "jsonpath-ng>=1.6",
    "jsonschema>=4.20",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "pytest-timeout>=2.3",
    "hypothesis>=6",
    "ruff>=0.6",
    "mypy>=1.10",
    "lxml-stubs>=0.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docx_knife"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["docx_knife"]

[tool.coverage.report]
fail_under = 85
skip_empty = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "W", "TID", "SIM", "C4"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["docx_knife"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*", "jsonpath_ng", "jsonpath_ng.*"]
ignore_missing_imports = true
